--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,21 +6,21 @@
   <div class="container">
   <form class="col-8">
     <div class="row">
-
       <div class="mb-3 col-2">
         <label for="exampleInputEmail1" class="form-label">Distrib</label>
-        <input type="text" class="form-control" id="busca" maxlength="6" [(ngModel)]="busqueda" name="busca" placeholder="Buscar" (keyup)="search($event, this.busca.value)" #busca>
+        <!-- El evento "keyup" llama directamente a el metodo 'search()' en la clase 'app.components.ts'
+             este metodo recibe el valor del evento y el número del distribuidor que introdujimos en el textbox-->
+        <input type="text" class="form-control" id="busca" maxlength="6" [(ngModel)]="busqueda" name="busca" placeholder="Buscar" 
+               (keyup)="buscar($event, this.busca.value)" #busca>
       </div>
 
       <div class="mb-3 col-2">
         <label for="exampleInputEmail1" class="form-label">#Distrib</label>
         <input type="text" class="form-control" [value]="info[0].Id" disabled>
       </div>
-      
     </div>
 
     <div class="row">
-
       <div class="mb-3 col-3">
         <label for="exampleInputEmail1" class="form-label">Disponible</label>
         <input type="text" class="form-control" [value]="info[0].Saldo | currency" disabled>
@@ -32,11 +32,11 @@
       </div>
 
       <div class="mb-3 col-3" style="margin-top: 45px;">
+        <!-- Estas condiciones son para mostrar un checkbox seleccionado o deseleccionado, dependiendo del valor que tenga el campo "Acepta Electronica" -->
         <b *ngIf="info[0].Electronica == 1"> <input class='form-check-input' type='checkbox' value='' checked disabled> &nbsp; </b>
         <b *ngIf="info[0].Electronica == 0"> <input class='form-check-input' type='checkbox' value='' disabled> &nbsp;</b>
         Electrónica
       </div>
-
     </div>
 
     <div class="mb-3 col-8">
@@ -47,6 +47,8 @@
   </form>
 
   <table>
+    <!-- Los eventos 'mouseover' y 'mouseout' son solo para cambiar el contenido de la imagen principal (la más grande) acorde a la imagen que se
+         este seleccionando con el cursor -->
     <tr>
       <td>
         <img [src]='imagen1' width=100 height=100
@@ -74,7 +76,7 @@
 
   </table>
 
-</div>
+ </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-  </div>
+</div>
